zmiana dolu strony

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 	<footer>
 		<p>O autorze:</p>
-		<p>Jestem Jack, gracz od lat i miłośnik konsol. Na co dzień pracuję jako programista, ale w wolnym czasie pochłaniają mnie gry. Postanowiłem stworzyć tę stronę, aby podzielić się swoją pasją z innymi graczami i pomóc im w osiąganiu lepszych wyników w ulubionych grach. Mam nadzieję, że znajdziesz na naszej stronie wiele ciekawych informacji i przydatnych porad.</p>
+		<p>Jestem Konrad, gracz od lat i miłośnik muzyki. Mam nadzieję, że znajdziesz na naszej stronie wiele ciekawych informacji i przydatnych porad.</p>
 	</footer>
 </body>
 </html>
